Nothing is setting the content-type I guess, so these should be named .html so the browser tries to render it?

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <h1>St Louis Technology Jobs</h1>
     <p>Select your chart:</p>
     <ul>
-        <li><a href="charts/lang-by-date">Amount of job postings by date/language</a></li>
-        <li><a href="charts/top-employer">Top job postings by employer</a></li>
+        <li><a href="charts/lang-by-date.html">Amount of job postings by date/language</a></li>
+        <li><a href="charts/top-employer.html">Top job postings by employer</a></li>
     </ul>
 
 </body></html>
