One more for tonight

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="charts/lang-by-date.html">Amount of job postings by date/language</a></li>
         <li><a href="charts/top-employer.html">Top job postings by employer</a></li>
+        <li><a href="charts/language-popularity.html">Top languages</a></li>
     </ul>
 
 </body></html>
